# epub-compressor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.jsonc
.devcontainer/: devcontainer.json
src/: app.html
src/epub_compressor/: app.py  cli.py  compress.py
src/lib/: compressWorker.ts  errors.ts  index.ts  logger.ts  utils.ts
src/routes/: +page.svelte  styles.css
